Tue Jul 25 10:49:57 2000  Robin Ericsson  <robin@noname4us.com>

	* acconfig.h: added #undef ENABLE_MCCP

	* configure.in: Added --enable-mccp as option.

	* src/net.c [open_connection,read_from_connection]: made some changes
	so AMCL can compile with MCCP as it don't really seems to work right now.

Thu Jul 20 17:20 2000  Jordi Mallach  <jordi@debian.org>
	* Added internationalization support.
	  + Added gettext calls to all strings. Affects action.c, amcl.c,
	    alias.c, color.c, init.c, keybind.c, map.c, modules.c,
	    modules_api.c, net.c, prefs.c, version.c, window.c and wizard.c.
	  + added libintl.h include in all the gettextized files.
	  + src/amcl.c: added locale.h include and setlocale() and
	    textdomain calls in main().
	  + Added intl/ and po/ directories.
	  + aclocal.m4: added needed macros by gettext.
	  + acconfig.h: added NLS config options.
	  + configure.in, Makefile.am, Makefile.in, src/Makefile.in: tweaked
	    paths, added variables needed for po making and added ABOUT-NLS
	    to the documentation.
	* Corrected a selection of typos while browsing the code, specially
	  in src/alias.c and src/wizard.c.
	* Initial es.po. It's not complete, but only the automapper needs to
	  be translated, the rest is finished.

Mon Jul 17 16:04:20 2000  Robin Ericsson  <robin@noname4us.com>

	* configure.in: added check for zlib, and if, enable MCCP.

	* src/Makefile.am: added mccpDecompress.[ch].

	* src/amcl.h: #include for stdio.h removed, and added mccpDecompress.h
	(connection_data): added *mccp, and mccp_timer.

	* src/dialog.h: added stdio.h include.

	* src/init.c: added stdio.h
	[init_window]: call mudcompress_new() on ->mccp.

	* src/modules_api.c: added stdio.h

	* src/net.c [make_connection]: added call to mudcompress_new()
	[mccp_pendingresponse]: timer function to check for compress data to 
	send.
	[disconnect]: clear mccp, and initialize it again.
	[open_connection]: added timer to mccp_pendingresponse(), also alot
	of other MCCP changes.