@@ -123,10 +123,6 @@ void load_wizard ()
         g_free (name);
     }
 
-    /* added 19980915 by David Zanetti <dave@lynx.co.nz>
-     * this should fix a segfault when there's a zero-byte connections
-     * file
-     */
     if (w)
     {
     /* end addition */
@@ -139,7 +135,6 @@ void load_wizard ()
       else if ( w != NULL )
         free_wizard_data (w);
 
-      /* DSZ 19980915 - moved here from bellow the fclose(fp); */
       wizard_connection_list2 = wizard_connection_list2->next;
       wizard_connection_list2->prev = NULL;
     }
@@ -350,9 +345,9 @@ void wizard_button_modify (GtkWidget *button, gpointer data)
 
     if ( (  w = wizard_get_wizard_data (texta[0]) ) == NULL )
     {
-        popup_window (_("As for the moment, everything but the name can be "
-			"changed.\n\nIf you need to change the name of the "
-			"connection, you have to use delete."));
+        popup_window (_("At the moment, everything but the name can be "
+			"changed.\nIf you need to change the name of the "
+			"connection, you'll have to recreate it."));
         return;
     }
 
@@ -450,7 +445,7 @@ void window_wizard (GtkWidget *widget, gpointer data)
     gtk_widget_set_sensitive (menu_main_wizard, FALSE);
     
     wizard_window = gtk_window_new (GTK_WINDOW_TOPLEVEL);
-    gtk_window_set_title (GTK_WINDOW (wizard_window), _("Amcl Connection Wizard"));
+    gtk_window_set_title (GTK_WINDOW (wizard_window), _("AMCL Connection Wizard"));
     gtk_signal_connect_object (GTK_OBJECT (wizard_window), "destroy",
                                GTK_SIGNAL_FUNC(wizard_close_window), NULL );
     gtk_widget_set_usize (wizard_window,450,380);
@@ -501,9 +496,8 @@ void window_wizard (GtkWidget *widget, gpointer data)
     wizard_entry_name = gtk_entry_new ();
     gtk_box_pack_start (GTK_BOX (vbox), wizard_entry_name, FALSE, FALSE, 0);
     gtk_tooltips_set_tip (tooltip, wizard_entry_name,
-			_("This is what you will call the connection, and "
-			  "will also be used in when you choose a "
-			  "connection in the list on the left."),
+			_("This is the name of the conection which will be "
+			  "displayed in the conection list."),
 			  NULL);
     gtk_widget_show (wizard_entry_name);
 
@@ -514,7 +508,7 @@ void window_wizard (GtkWidget *widget, gpointer data)
     wizard_entry_host = gtk_entry_new ();
     gtk_box_pack_start (GTK_BOX (vbox), wizard_entry_host, FALSE, FALSE, 0);
     gtk_tooltips_set_tip (tooltip, wizard_entry_host,
-			_("This is the host where the mud you will connect "
+			_("This is the host where the MUD you will connect "
 			  "to is located."),
 			  NULL);
     gtk_widget_show (wizard_entry_host);
@@ -526,7 +520,7 @@ void window_wizard (GtkWidget *widget, gpointer data)
     wizard_entry_port = gtk_entry_new ();
     gtk_box_pack_start (GTK_BOX (vbox), wizard_entry_port, FALSE, FALSE, 0);
     gtk_tooltips_set_tip (tooltip, wizard_entry_port,
-			_("This is the port of the host that the mud is "
+			_("This is the port on the host that the MUD is "
 			  "located on. The default port is 23 (telnet)."),
 			  NULL);
     gtk_widget_show (wizard_entry_port);
@@ -537,9 +531,9 @@ void window_wizard (GtkWidget *widget, gpointer data)
                         wizard_check_autologin);
     gtk_box_pack_start (GTK_BOX (vbox), wizard_check_autologin, FALSE, FALSE, 0);
     gtk_tooltips_set_tip (tooltip, wizard_check_autologin,
-			_("Should AMCL login to this mud automatically? "
-			  "For this to work, Player Name and Password must "
-			  "be set."),
+			_("Should AMCL login to this MUD automatically? "
+			  "Player Name and Password must be set to make "
+			  "this work."),
 			  NULL);
     GTK_WIDGET_UNSET_FLAGS (wizard_check_autologin, GTK_CAN_FOCUS);
     gtk_widget_show (wizard_check_autologin);
@@ -551,8 +545,8 @@ void window_wizard (GtkWidget *widget, gpointer data)
     wizard_entry_player = gtk_entry_new ();
     gtk_box_pack_start (GTK_BOX (vbox), wizard_entry_player, FALSE, FALSE, 0);
     gtk_tooltips_set_tip (tooltip, wizard_entry_player,
-			_("This is the player you login to the mud with, this "
-			  "only works if AutoLogin is set."),
+			_("This is the player you login to the MUD with. For "
+			  "use with AutoLogin."),
 			  NULL);
     gtk_widget_show (wizard_entry_player);
 
@@ -564,7 +558,8 @@ void window_wizard (GtkWidget *widget, gpointer data)
     gtk_entry_set_visibility (GTK_ENTRY (wizard_entry_password), FALSE);
     gtk_box_pack_start (GTK_BOX (vbox), wizard_entry_password, FALSE, FALSE, 0);
     gtk_tooltips_set_tip (tooltip, wizard_entry_password,
-			_("Use this together with PlayerName and AutoLogin."),
+			_("This is your player account's password in the "
+			  "MUD. For use with AutoLogin."),
 			  NULL);
     gtk_widget_show (wizard_entry_password);
 
@@ -572,9 +567,9 @@ void window_wizard (GtkWidget *widget, gpointer data)
     gtk_container_add (GTK_CONTAINER (vbox_base), hbox2);
     gtk_widget_show (hbox2);
 
-    button_add     = gtk_button_new_with_label (_("add"));
-    button_update  = gtk_button_new_with_label (_("apply"));
-    button_delete  = gtk_button_new_with_label (_("delete"));
+    button_add     = gtk_button_new_with_label (_("Add"));
+    button_update  = gtk_button_new_with_label (_("Apply"));
+    button_delete  = gtk_button_new_with_label (_("Delete"));
     gtk_signal_connect (GTK_OBJECT (button_add), "clicked",
                                GTK_SIGNAL_FUNC (wizard_button_add),
                                (gpointer) clist);
@@ -599,9 +594,9 @@ void window_wizard (GtkWidget *widget, gpointer data)
     gtk_container_add (GTK_CONTAINER (vbox_base), hbox3);
     gtk_widget_show (hbox3);
 
-    button_connect = gtk_button_new_with_label (_("connect"));
-    button_save    = gtk_button_new_with_label (_("save"));
-    button_close   = gtk_button_new_with_label (_("close"));
+    button_connect = gtk_button_new_with_label (_("Connect"));
+    button_save    = gtk_button_new_with_label (_("Save"));
+    button_close   = gtk_button_new_with_label (_("Close"));
     gtk_signal_connect (GTK_OBJECT (button_connect), "clicked",
                         GTK_SIGNAL_FUNC (wizard_button_connect),
                         (gpointer) clist);
